<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">LifeMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="address_lifemonitor">www.lifemonitor.com</string>

    <!-- AddTreatment -->
    <string name="title_activity_add_treatment">AddTreatmentActivity</string>
    <string name="add_treatment_button">Ajouter un traitement</string>
    <string name="add_treatment_title">Ajouter un traitement</string>
    <string name="start_date">Début du traitement</string>
    <string name="medicine">Médicament</string>
    <string name="duration">Nombre de jours de traitement</string>
    <string name="frequency">Fréquence</string>
    <string name="units">Dosage</string>
    <string name="db_error">problème d\'accès à la base de données</string>

    <!-- Frequency possibilities -->
    <string name="day">jour</string>
    <string name="week">semaine</string>
    <string name="month">mois</string>
    <string name="year">année</string>

    <!-- Add genetic desease -->
    <string name="dialog_title_add_genetic_disease">Ajouter une maladie génétique</string>
    <string name="confirm_text_button">Confirmer</string>
    <string name="cancel_text_buttom">Annuler</string>
    <string name="confirmation_message">Êtes-vous de sûr de vouloir ajouter </string>
    <string name="addGeneticDiseaseError">Impossible d\'ajouter cette maladie à votre dossier médical</string>

    <!-- ShowMedicine -->
    <string name="title_activity_show_medicine">ShowMedicineActivity</string>
    <string name="show_medicine_button">Afficher un médicament</string>
    <string name="show_medicine_title">Afficher un médicament</string>
    <string name="medicine_name">Appellation</string>
    <string name="medicine_shape">Format</string>
    <string name="medicine_consumption">Mode d\'administration</string>
    <string name="medicine_danger_level">Niveau de danger</string>
    <string name="danger_level1_description">Soyez prudent. Ne pas conduire sans avoir lu la notice.</string>
    <string name="danger_level2_description">Soyez très prudent. Ne pas conduire sans l\’avis d’un professionnel de santé.</string>
    <string name="danger_level3_description">Attention, danger : ne pas conduire. Pour la reprise de la conduite, demandez l\’avis d’un médecin. </string>
    <string name="start_date_prefix">début du traitement le :</string>
    <string name="end_date_prefix">Fin du traitement le :</string>
    <string name="end_date">Fin du traitement</string>
    <string name="submit_treatment">Ajouter le traitement</string>
    <string name="startDateBeforeTodayError">La date de début du traitement est déjà dépassée</string>
    <string name="startDateAfterEndDate">La date de début est après la date de fin de traitement</string>
    <string name="addTreatment_error">Impossible d\'ajouter ce traitement</string>
    <string name="medicineNotChosen">Veuillez choisir un medicament existant</string>
    <string name="intent_medicine_id_error">Le médicament n\'a pas été trouvé, veuillez réessayer.</string>
    <string name="quantity">Dosage</string>
    <string name="frequency_separator">fois par</string>
    <string name="doctor_prescription">Prescrit par</string>
    <string name="prefixBeginTreatmentDateDialog">Du</string>
    <string name="prefixEndTreatmentDateDialog">Au</string>
    <string name="prefixMedicineToTakeDialog">À prendre</string>
    <string name="suffixQuantityOfMedicineToTake">par prise</string>

    <!-- Shape (medicine) -->
    <string name="gel">Gel</string>
    <string name="capsule">Gélule</string>
    <string name="pills">Comprimé</string>
    <string name="ointment">Pommade</string>
    <string name="powder">Poudre</string>
    <string name="gas">Gaz</string>
    <string name="plant">Plante</string>
    <string name="solution">Solution</string>
    <string name="pellet">Capsule</string>
    <string name="cream">Crème</string>
    <string name="liquid">Sirop</string>
    <string name="suspension">Suspension</string>

    <!-- How to take (medicine) -->
    <string name="Oral">Orale</string>
    <string name="Dermal">Cutanée</string>
    <string name="Intraveinous">Intraveineuse</string>
    <string name="Auricular">Auriculaire</string>
    <string name="Intramuscular">Intramusculaire</string>
    <string name="Inhaled">Inhalée</string>
    <string name="Sublingual">Sublinguale</string>
    <string name="Ophtalmic">Opthalmique</string>
    <string name="Perineural">Périneurale</string>
    <string name="Nasal">Nasale</string>
    <string name="Endotracheopulmonary">Endotrachéobronchique</string>
    <string name="Plant">Plante</string>
    <string name="notChosenUnits">Veuillez choisir un dosage</string>
    <string name="show_medical_record_title">Dossier Médical</string>
    <string name="connexion_error">Impossible de se connecter au serveur.</string>
    <string name="show_medical_record_button">Afficher mon Dossier Médical</string>
    <string name="popup_sync">Actualiser</string>
    <string name="prepend_treatment_title_listview">Traitement pour </string>
    <string name="prepend_treatment_subtitle_listview">depuis le</string>

    <!-- Config menu -->
    <string name="title_user_config_menu">Configuration</string>
    <string name="title_call">Appel d\'urgence</string>
    <string name="user_save_button">Sauvegarder et Quitter</string>
    <string name="user_firstname">Prénom </string>
    <string name="user_surname">Nom </string>
    <string name="user_phone">Téléphone </string>
    <string name="user_mail">Email </string>
    <string name="user_firstname_sample">Anne</string>
    <string name="user_surname_sample">Nonime</string>
    <string name="user_blood_group">Groupe Sanguin</string>
    <string name="user_emergency_number">N° Urgence</string>
    <string name="user_emergency_number_sample">911</string>
    <string name="user_doctor_name">Nom médecin Traitant</string>
    <string name="user_doctor_name_sample">Dr. Acula</string>
    <string name="user_doctor_number">N° médecin Traitant</string>
    <string name="treatment_prepend_title">"Traitement au "</string>
    <string name="treatment_prepend_subtitle">"Depuis le "</string>
    <string name="user_email_sample">lifemonitor@lifelab.com</string>
    <string name="emergency_number_empty">Veuillez entrer le numéro dans "Configuration"</string>
    <string name="treatment">LifeMonitor - Rappel</string>
    <string name="activate_notifications">Activer les notifications</string>
    <string name="of">" de "</string>
    <string name="hour_separator">" à "</string>

    <!-- Add doctor appointment -->
    <string name="prefixDoctorName">Docteur :</string>
    <string name="prefixDateDayAppointmentDoctor">Date :</string>
    <string name="modify">Modifier</string>
    <string name="prefixDateHourAppointmentDoctor">Heure :</string>
    <string name="addAppointementDoctorButtonText">Ajouter le Rendez-Vous</string>
    <string name="undefinedDateAppointmentDoctor">Choisir une date</string>

    <!-- SLIDER MENU -->
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Dossier médical</item>
        <item>Ajouter un rendez-vous médical</item>
        <item>Ajouter un traitement</item>
        <item>Médicaments à prendre</item>
        <item>Ajouter une maladie génétique</item>
        <item>Pharmacies proches</item>
        <item>Configuration</item>
        <item>Appel d\'urgence</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_archive</item>
        <item>@android:drawable/ic_menu_add</item>
        <item>@android:drawable/ic_menu_add</item>
        <item>@drawable/view_medicine_button</item>
        <item>@android:drawable/ic_menu_add</item>
        <item>@android:drawable/ic_menu_mapmode</item>
        <item>@android:drawable/ic_menu_info_details</item>
        <item>@android:drawable/stat_sys_phone_call</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="autoCompleteTextAppointmentDoctor">Chercher un docteur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="self_position">Vous êtes ici</string>
</resources>