<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:useDefaultMargins="false">

        <TextView
            android:id="@+id/firstname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_firstname" />

        <EditText
            android:id="@+id/firstname_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user_firstname_sample" />

        <TextView
            android:id="@+id/surname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_surname" />

        <EditText
            android:id="@+id/surname_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user_surname_sample" />

        <TextView
            android:id="@+id/mail_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_mail" />

        <EditText
            android:id="@+id/mail_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/user_email_sample"
        />

        <TextView
            android:id="@+id/number_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone" />

        <EditText
            android:id="@+id/number_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </GridLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/user_save_button" />
</LinearLayout>