<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texthere2"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/menu_user_name" />

    </LinearLayout>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/btn_showmedicalrecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/btn_showmedicalrecord"
                android:text="@string/show_medical_record_button" />

            <Button
                android:id="@+id/addTreatmentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_treatment_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showMedicinebutton"
                android:text="@string/show_medicine_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_user_config_menu"
                android:id="@+id/showConfigMenu" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
