<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixBeginTreatmentDateDialog" />

            <TextView
                android:id="@+id/treatment_startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixEndTreatmentDateDialog" />

            <TextView
                android:id="@+id/treatment_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixMedicineToTakeDialog" />

            <TextView
                android:id="@+id/treatment_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/treatment_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suffixQuantityOfMedicineToTake" />

            <TextView
                android:id="@+id/treatment_doctor_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctor_prescription" />

            <TextView
                android:id="@+id/treatment_doctor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </GridLayout>
    </ScrollView>
</RelativeLayout>